@@ -1,5 +1,6 @@
 import javax.swing.JFileChooser;
 import javax.swing.JFrame;
+import java.nio.charset.StandardCharsets;
 import java.util.Properties;
 import java.io.*;
 import java.net.*;
@@ -114,7 +115,7 @@ public class FileChooser
         URL classURL = FileChooser.class.getResource("FileChooser.class");
         URL fileURL = new URL(classURL,"../images/");
         directory = fileURL.getPath();
-        directory = URLDecoder.decode(directory, "UTF-8");
+        directory = URLDecoder.decode(directory, StandardCharsets.UTF_8);
         dirFile = new File(directory);
         if (dirFile.exists()) {
           //setMediaPath(directory);
